--- a/src/main/resources-dev/application.properties
+++ b/src/main/resources-dev/application.properties
@@ -24,4 +24,4 @@ datasource.useServerPrepStmts = true
 datasource.user = merong
 datasource.password = Wkwkdaus
 
-deploy.phase = local
+deploy.phase = dev
